# attraction-classifier

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.py  dataset.py  face_grab.py  gradcam.py  infer.py  model.joblib  model.py  ntb.ipynb  process.cpp  swiper-api.py  swiper.py  train.py  weights.keras
wandb/: latest-run
wandb/run-20230808_185338-8d8sz98p/: run-8d8sz98p.wandb
wandb/run-20230808_185338-8d8sz98p/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20230808_190158-pny2hu0d/: run-pny2hu0d.wandb
wandb/run-20230808_190158-pny2hu0d/files/: config.yaml  (+2 more)
wandb/run-20230808_190250-mdfxf1fo/: run-mdfxf1fo.wandb
wandb/run-20230808_191010-0bclm7ww/: run-0bclm7ww.wandb
wandb/run-20230808_192204-qj8e7q0m/: run-qj8e7q0m.wandb
wandb/run-20230808_192842-jip7z9fn/: run-jip7z9fn.wandb
wandb/run-20230808_193000-renljo9x/: run-renljo9x.wandb
wandb/run-20230808_193140-6wf7ywxc/: run-6wf7ywxc.wandb
wandb/run-20230808_193316-wofqjxyv/: run-wofqjxyv.wandb
wandb/run-20230808_194152-oql7mcwn/: run-oql7mcwn.wandb
wandb/run-20230808_194223-9k4xh1kp/: run-9k4xh1kp.wandb
wandb/run-20230808_194344-wcgx80bg/: run-wcgx80bg.wandb
wandb/run-20230808_194407-vg2aw4sa/: run-vg2aw4sa.wandb
wandb/run-20230808_194502-uet383ol/: run-uet383ol.wandb
wandb/run-20230808_194623-qvg5f59g/: run-qvg5f59g.wandb
wandb/run-20230808_194855-p33dnlzp/: run-p33dnlzp.wandb
wandb/run-20230808_195212-5phr3prw/: run-5phr3prw.wandb
wandb/run-20230808_200413-dn39ii6f/: run-dn39ii6f.wandb
wandb/run-20230808_200455-m8e4fu4s/: run-m8e4fu4s.wandb
(+53 files in other folders)
